# coding_agent_bench

./: .env.example  .gitignore  Containerfile  README.md  pyproject.toml
.github/workflows/: build-push.yml
benchmarks/: SWE_Bench_GPT_5.5_Codex.md  SWE_Bench_Opus_4.8_Claude_Code.md  SWE_Bench_Opus_4.8_OpenCode.md  SWE_Bench_Pro_Ansible_GPT_5.5_Codex.md  SWE_Bench_Pro_Ansible_GPT_5.5_OpenCode.md  SWE_Bench_Pro_Ansible_Opus_4.6_Claude_Code.md  SWE_Bench_Pro_Ansible_Opus_4.8_Claude_Code.md  SWE_Bench_Pro_Ansible_Opus_4.8_OpenCode.md  SWE_Bench_Pro_Ansible_Qwen3.6_35b_NVFP4_Claude_Code.md  SWE_Bench_Pro_Ansible_Qwen3.6_35b_NVFP4_OpenClaw.md  SWE_Bench_Pro_Ansible_Qwen3.6_35b_NVFP4_OpenCode.md  SWE_Bench_Pro_Ansible_Qwen3.6_35b_NVFP4_Pi.md  SWE_Bench_Pro_Ansible_Qwen3.6_35b_NVFP4_Qwen_Code.md  SWE_Bench_Pro_Ansible_Sonnet_4.6_Claude_Code.md  SWE_Bench_Qwen3.6_35b_NVFP4_Claude_Code.md  SWE_Bench_Qwen3.6_35b_NVFP4_OpenClaw.md  SWE_Bench_Qwen3.6_35b_NVFP4_OpenCode.md  SWE_Bench_Qwen3.6_35b_NVFP4_Pi.md  SWE_Bench_Qwen3.6_35b_NVFP4_Qwen_Code.md  Terminal_Bench_Qwen3.6_35b_NVFP4_OpenClaw.md  Terminal_Bench_Qwen3.6_35b_NVFP4_OpenCode.md  Terminal_Bench_Qwen3.6_35b_NVFP4_Pi.md
deploy/: Qwen3.6_27b_FP8.yml  Qwen3.6_35b_NVFP4.yml  README.md  harbor-minio.yml  harbor-orchestrator-sa.yml  harbor-rbac.yml  harbor-task-sa.yml  job-queue-service.yml  qwen-all-in-one.yml
scripts/: calculate_metrics.py  codex_config_toml.py  harbor_smoke_test.sh  list_gpu_pods.sh  patch_opencode.py  pull_images.py  replace_swe_bench_images.py  sample_script.py  test_concurrency.sh  validate_deployment.sh
scripts/manual/: validate_deployment.sh
scripts/templates/: report_template.md
(+16 files in other folders)
