[project]
name = "coding-agent-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "harbor",
    "huggingface-hub>=0.20.0",
    "pyyaml>=6.0",
    "tenacity>=8.0",
    "typer>=0.15.0",
]

[project.scripts]
coding-agent-bench = "coding_agent_bench.cli:app"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.uv.sources]
harbor = { git = "https://github.com/taagarwa-rh/harbor.git", rev = "fix/openshift-various-bugs" }
